@@ -6,7 +6,9 @@ use SPVM::Builder::Resource;
 
 my $config = SPVM::Builder::Config->new_gnu99;
 
-my $resource = $config->use_resource('TestCase::Resource::Foo1::V1_0_0', mode => 'mode1', args => ['args1', 'args2']);
+$config->use_resource('TestCase::Resource::Foo1::V1_0_0', mode => 'mode1', args => ['args1', 'args2']);
+
+my $resource = $config->get_resource('TestCase::Resource::Foo1::V1_0_0');
 
 $main::TEST_USE_RESOURCE_RET = $resource;
 
